@@ -1,1 +1,1 @@
-YAHOO.widget.PhocoaDialog=function(B,A){YAHOO.widget.PhocoaDialog.superclass.constructor.call(this,B,A);this.moduleViewHasLoaded=false};YAHOO.extend(YAHOO.widget.PhocoaDialog,YAHOO.widget.Panel);YAHOO.widget.PhocoaDialog._DEFAULT_CONFIG={DEFER_MODULE_VIEW_LOADING:{key:"deferModuleViewLoading",value:false},CACHE_MODULE_VIEW:{key:"cacheModuleView",value:false},MODULE_VIEW_INVOCATION_PATH:{key:"moduleViewInvocationPath",value:null}};YAHOO.widget.PhocoaDialog.CSS_DIALOG="yui-dialog";YAHOO.widget.PhocoaDialog.prototype.initDefaultConfig=function(){YAHOO.widget.PhocoaDialog.superclass.initDefaultConfig.call(this);this.callback={success:this.callbackSuccess,failure:this.callbackFailure,argument:this,scope:this};var A=YAHOO.widget.PhocoaDialog._DEFAULT_CONFIG;this.cfg.addProperty(A.DEFER_MODULE_VIEW_LOADING.key,{handler:this.configDeferModuleViewLoading,value:A.DEFER_MODULE_VIEW_LOADING.value});this.cfg.addProperty(A.CACHE_MODULE_VIEW.key,{handler:this.configCacheModuleView,value:A.CACHE_MODULE_VIEW.value});this.cfg.addProperty(A.MODULE_VIEW_INVOCATION_PATH.key,{handler:this.configModuleViewInvocationPath,value:A.MODULE_VIEW_INVOCATION_PATH.value})};YAHOO.widget.PhocoaDialog.prototype.callbackSuccess=function(o){var phocoaDialog=o.argument;var newBodyContent=null;if(o.responseXML!==null&&o.responseXML.firstChild!==null){if(YAHOO.env.ua.ie>0){newBodyContent=o.responseXML.documentElement.firstChild.text}else{newBodyContent=o.responseXML.firstChild.textContent}}else{newBodyContent=o.responseText}phocoaDialog.applyStyles(newBodyContent);phocoaDialog.setBody(newBodyContent);var bodyEl=YAHOO.util.Dom.get(phocoaDialog.id);var scriptEls=bodyEl.getElementsByTagName("script");for(idx=0;idx<scriptEls.length;idx++){var node=scriptEls[idx];window.eval(node.innerHTML)}this.moduleViewHasLoaded=true};YAHOO.widget.PhocoaDialog.prototype.callbackFailure=function(A){alert("Problem submitting XHR request.")};YAHOO.widget.PhocoaDialog.prototype.initEvents=function(){YAHOO.widget.PhocoaDialog.superclass.initEvents.call(this);this.beforeSubmitEvent=new YAHOO.util.CustomEvent("beforeSubmit");this.submitEvent=new YAHOO.util.CustomEvent("submit");this.cancelEvent=new YAHOO.util.CustomEvent("cancel")};YAHOO.widget.PhocoaDialog.prototype.init=function(B,A){YAHOO.widget.PhocoaDialog.superclass.init.call(this,B);this.beforeInitEvent.fire(YAHOO.widget.PhocoaDialog);YAHOO.util.Dom.addClass(this.element,YAHOO.widget.PhocoaDialog.CSS_DIALOG);this.cfg.setProperty("visible",false);if(A){this.cfg.applyConfig(A,true)}this.initEvent.fire(YAHOO.widget.PhocoaDialog);this.changeBodyEvent.subscribe(function(){this.registerForms();this.focusFirst();this.doCenterOnDOMEvent()},this,true)};YAHOO.widget.PhocoaDialog.prototype.registerForms=function(){var A=this.element.getElementsByTagName("form");for(i=0;i<A.length;i++){var B=A[i];B.nativeSubmitHandler=B.submit;YAHOO.util.Event.addListener(B,"submit",function(D){var C=YAHOO.util.Event.getTarget(D);YAHOO.util.Event.stopEvent(D);this.submit(C);C.blur()},this,true);B.submit=this.submit.bind(this,B)}};YAHOO.widget.PhocoaDialog.prototype.applyStyles=function(C){if(this.browser=="gecko"){return }var H=null;var A="<style[^>]*>([\u0001-\uFFFF]*?)</style>";var G=new RegExp(A,"img");var F=new RegExp(A,"im");var E=(C.match(G)||[]).map(function(I){return(I.match(F)||["",""])[1]});for(i=0;i<E.length;i++){if(!H){H=document.getElementsByTagName("head")[0];if(!H){return }}var B=document.createElement("style");B.type="text/css";if(this.browser=="ie"||this.browser=="ie7"){B.styleSheet.cssText=E[i]}else{var D=document.createTextNode(E[i]);B.appendChild(D)}H.appendChild(B)}};YAHOO.widget.PhocoaDialog.prototype.configClose=function(C,A,D){var E=A[0];var B=function(G,F){F.cancel()};if(E){if(!this.close){this.close=document.createElement("div");YAHOO.util.Dom.addClass(this.close,"container-close");this.close.innerHTML="&#160;";this.innerElement.appendChild(this.close);YAHOO.util.Event.addListener(this.close,"click",B,this)}else{this.close.style.display="block"}}else{if(this.close){this.close.style.display="none"}}};YAHOO.widget.PhocoaDialog.prototype.configDeferModuleViewLoading=function(B,A,C){this.deferModuleViewLoading=A[0]};YAHOO.widget.PhocoaDialog.prototype.configCacheModuleView=function(B,A,C){this.cacheModuleView=A[0]};YAHOO.widget.PhocoaDialog.prototype.configModuleViewInvocationPath=function(B,A,C){this.moduleViewInvocationPath=A[0]};YAHOO.widget.PhocoaDialog.prototype.submit=function(D){this.beforeSubmitEvent.fire();var E=D.getAttribute("method")||"POST";E=E.toUpperCase();var A=(YAHOO.util.Selector.query("input[type=file]",D,true)!==null);if(A){var C=D.submit;D.submit=function(){D.nativeSubmitHandler()};YAHOO.util.Connect.setForm(D,true);this.callback.upload=this.callback.success;var B=YAHOO.util.Connect.asyncRequest(E,D.getAttribute("action"),this.callback,"HTTP_X_REQUESTED_WITH=xmlhttprequest&__phocoa_rpc_ajax_iframe_mode=1");D.submit=C}else{YAHOO.util.Connect.setForm(D);var B=YAHOO.util.Connect.asyncRequest(E,D.getAttribute("action"),this.callback)}this.submitEvent.fire();return true};YAHOO.widget.PhocoaDialog.prototype.cancel=function(){this.cancelEvent.fire();this.hide()};YAHOO.widget.PhocoaDialog.prototype.show=function(A){A=A||null;if(A){this.moduleViewInvocationPath=A;this.moduleViewHasLoaded=false}YAHOO.util.Dom.setStyle(this.body,"overflow","auto");if(this.deferModuleViewLoading&&((this.cacheModuleView===false)||(this.cacheModuleView===true&&this.moduleViewHasLoaded===false))){if(this.moduleViewInvocationPath===null){throw"No invocation path is set."}this.setBody("Loading...");YAHOO.widget.PhocoaDialog.superclass.show.call(this);YAHOO.util.Connect.asyncRequest("GET",this.moduleViewInvocationPath,this.callback)}else{YAHOO.widget.PhocoaDialog.superclass.show.call(this)}};YAHOO.widget.PhocoaDialog.prototype.focusFirst=function(){var C=this.element.getElementsByTagName("form")[0];if(!C){return }var B=null;for(var D=0;D<C.elements.length;D++){var A=C.elements[D];if(A.focus&&!A.disabled){if(A.type&&A.type!="hidden"&&A.type!="submit"){B=A;break}}}if(!B){return }window.setTimeout(function(){B.focus()},1)};YAHOO.widget.PhocoaDialog.prototype.toString=function(){return"PhocoaDialog "+this.id};YAHOO.register("phocoaDialog",YAHOO.util.Panel,{version:"0.1",build:"1"});
+YAHOO.widget.PhocoaDialog=function(B,A){YAHOO.widget.PhocoaDialog.superclass.constructor.call(this,B,A);this.moduleViewHasLoaded=false};YAHOO.extend(YAHOO.widget.PhocoaDialog,YAHOO.widget.Panel);YAHOO.widget.PhocoaDialog._DEFAULT_CONFIG={DEFER_MODULE_VIEW_LOADING:{key:"deferModuleViewLoading",value:false},CACHE_MODULE_VIEW:{key:"cacheModuleView",value:false},MODULE_VIEW_INVOCATION_PATH:{key:"moduleViewInvocationPath",value:null}};YAHOO.widget.PhocoaDialog.CSS_DIALOG="yui-dialog";YAHOO.widget.PhocoaDialog.prototype.initDefaultConfig=function(){YAHOO.widget.PhocoaDialog.superclass.initDefaultConfig.call(this);this.callback={success:this.callbackSuccess,failure:this.callbackFailure,argument:this,scope:this};var A=YAHOO.widget.PhocoaDialog._DEFAULT_CONFIG;this.cfg.addProperty(A.DEFER_MODULE_VIEW_LOADING.key,{handler:this.configDeferModuleViewLoading,value:A.DEFER_MODULE_VIEW_LOADING.value});this.cfg.addProperty(A.CACHE_MODULE_VIEW.key,{handler:this.configCacheModuleView,value:A.CACHE_MODULE_VIEW.value});this.cfg.addProperty(A.MODULE_VIEW_INVOCATION_PATH.key,{handler:this.configModuleViewInvocationPath,value:A.MODULE_VIEW_INVOCATION_PATH.value})};YAHOO.widget.PhocoaDialog.prototype.CONTEXT_TRIGGERS=YAHOO.widget.Overlay.prototype.CONTEXT_TRIGGERS.concat(["windowScroll","windowResize","beforeShow"]);YAHOO.widget.PhocoaDialog.prototype.callbackSuccess=function(o){var phocoaDialog=o.argument;var newBodyContent=null;if(o.responseXML!==null&&o.responseXML.firstChild!==null){if(YAHOO.env.ua.ie>0){newBodyContent=o.responseXML.documentElement.firstChild.text}else{newBodyContent=o.responseXML.firstChild.textContent}}else{newBodyContent=o.responseText}phocoaDialog.applyStyles(newBodyContent);phocoaDialog.setBody(newBodyContent);var bodyEl=YAHOO.util.Dom.get(phocoaDialog.id);var scriptEls=bodyEl.getElementsByTagName("script");for(idx=0;idx<scriptEls.length;idx++){var node=scriptEls[idx];window.eval(node.innerHTML)}this.moduleViewHasLoaded=true};YAHOO.widget.PhocoaDialog.prototype.callbackFailure=function(A){alert("Problem submitting XHR request.")};YAHOO.widget.PhocoaDialog.prototype.initEvents=function(){YAHOO.widget.PhocoaDialog.superclass.initEvents.call(this);this.beforeSubmitEvent=new YAHOO.util.CustomEvent("beforeSubmit");this.submitEvent=new YAHOO.util.CustomEvent("submit");this.cancelEvent=new YAHOO.util.CustomEvent("cancel")};YAHOO.widget.PhocoaDialog.prototype.init=function(B,A){YAHOO.widget.PhocoaDialog.superclass.init.call(this,B);this.beforeInitEvent.fire(YAHOO.widget.PhocoaDialog);YAHOO.util.Dom.addClass(this.element,YAHOO.widget.PhocoaDialog.CSS_DIALOG);this.cfg.setProperty("visible",false);if(A){this.cfg.applyConfig(A,true)}this.initEvent.fire(YAHOO.widget.PhocoaDialog);this.changeBodyEvent.subscribe(function(){this.registerForms();this.focusFirst();this.doCenterOnDOMEvent()},this,true)};YAHOO.widget.PhocoaDialog.prototype.registerForms=function(){var A=this.element.getElementsByTagName("form");for(i=0;i<A.length;i++){var B=A[i];B.nativeSubmitHandler=B.submit;YAHOO.util.Event.addListener(B,"submit",function(D){var C=YAHOO.util.Event.getTarget(D);YAHOO.util.Event.stopEvent(D);this.submit(C);C.blur()},this,true);B.submit=this.submit.bind(this,B)}};YAHOO.widget.PhocoaDialog.prototype.applyStyles=function(C){if(this.browser=="gecko"){return }var H=null;var A="<style[^>]*>([\u0001-\uFFFF]*?)</style>";var G=new RegExp(A,"img");var F=new RegExp(A,"im");var E=(C.match(G)||[]).map(function(I){return(I.match(F)||["",""])[1]});for(i=0;i<E.length;i++){if(!H){H=document.getElementsByTagName("head")[0];if(!H){return }}var B=document.createElement("style");B.type="text/css";if(this.browser=="ie"||this.browser=="ie7"){B.styleSheet.cssText=E[i]}else{var D=document.createTextNode(E[i]);B.appendChild(D)}H.appendChild(B)}};YAHOO.widget.PhocoaDialog.prototype.configClose=function(C,A,D){var E=A[0];var B=function(G,F){F.cancel()};if(E){if(!this.close){this.close=document.createElement("div");YAHOO.util.Dom.addClass(this.close,"container-close");this.close.innerHTML="&#160;";this.innerElement.appendChild(this.close);YAHOO.util.Event.addListener(this.close,"click",B,this)}else{this.close.style.display="block"}}else{if(this.close){this.close.style.display="none"}}};YAHOO.widget.PhocoaDialog.prototype.configDeferModuleViewLoading=function(B,A,C){this.deferModuleViewLoading=A[0]};YAHOO.widget.PhocoaDialog.prototype.configCacheModuleView=function(B,A,C){this.cacheModuleView=A[0]};YAHOO.widget.PhocoaDialog.prototype.configModuleViewInvocationPath=function(B,A,C){this.moduleViewInvocationPath=A[0]};YAHOO.widget.PhocoaDialog.prototype.submit=function(D){this.beforeSubmitEvent.fire();var E=D.getAttribute("method")||"POST";E=E.toUpperCase();var A=(YAHOO.util.Selector.query("input[type=file]",D,true)!==null);if(A){var C=D.submit;D.submit=function(){D.nativeSubmitHandler()};YAHOO.util.Connect.setForm(D,true);this.callback.upload=this.callback.success;var B=YAHOO.util.Connect.asyncRequest(E,D.getAttribute("action"),this.callback,"HTTP_X_REQUESTED_WITH=xmlhttprequest&__phocoa_rpc_ajax_iframe_mode=1");D.submit=C}else{YAHOO.util.Connect.setForm(D);var B=YAHOO.util.Connect.asyncRequest(E,D.getAttribute("action"),this.callback)}this.submitEvent.fire();return true};YAHOO.widget.PhocoaDialog.prototype.cancel=function(){this.cancelEvent.fire();this.hide()};YAHOO.widget.PhocoaDialog.prototype.show=function(A){A=A||null;if(A){this.moduleViewInvocationPath=A;this.moduleViewHasLoaded=false}YAHOO.util.Dom.setStyle(this.body,"overflow","auto");if(this.deferModuleViewLoading&&((this.cacheModuleView===false)||(this.cacheModuleView===true&&this.moduleViewHasLoaded===false))){if(this.moduleViewInvocationPath===null){throw"No invocation path is set."}this.setBody("Loading...");YAHOO.widget.PhocoaDialog.superclass.show.call(this);YAHOO.util.Connect.asyncRequest("GET",this.moduleViewInvocationPath,this.callback)}else{YAHOO.widget.PhocoaDialog.superclass.show.call(this)}};YAHOO.widget.PhocoaDialog.prototype.focusFirst=function(){var C=this.element.getElementsByTagName("form")[0];if(!C){return }var B=null;for(var D=0;D<C.elements.length;D++){var A=C.elements[D];if(A.focus&&!A.disabled){if(A.type&&A.type!="hidden"&&A.type!="submit"){B=A;break}}}if(!B){return }window.setTimeout(function(){B.focus()},1)};YAHOO.widget.PhocoaDialog.prototype.toString=function(){return"PhocoaDialog "+this.id};YAHOO.register("phocoaDialog",YAHOO.util.Panel,{version:"0.1",build:"1"});
